fix core_display_text() not to word-wrap text, instead the wrapping is done through CSS, this fix the issue with displaying unicode message which previously displayed incorrectly due to additional "\n"

--- a/web/plugin/themes/default/jscss/common.css
+++ b/web/plugin/themes/default/jscss/common.css
@@ -212,3 +212,34 @@ li {
 	border: 0px solid;
 	font-weight: bold;
 }
+
+#user_inbox_msg {
+	word-wrap: break-word;
+	width: 470px;
+}
+
+#user_incoming_msg {
+	word-wrap: break-word;
+	width: 260px;
+}
+
+#user_outgoing_msg {
+	word-wrap: break-word;
+	width: 400px;
+}
+
+#all_inbox_msg {
+	word-wrap: break-word;
+	width: 400px;
+}
+
+#all_incoming_msg {
+	word-wrap: break-word;
+	width: 190px;
+}
+
+#all_outgoing_msg {
+	word-wrap: break-word;
+	width: 260px;
+}
+
